# ZeroSysMon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: CpuCollector.cpp  CpuCollector.h  GpuCollector.cpp  GpuCollector.h  RamCollector.cpp  RamCollector.h  SystemState.h
src/ui/: Window.cpp  Window.h
